# sample-wasi-http-rust

./: Cargo.toml  README.md
.github/workflows/: publish.yml
src/: lib.rs
